# robotics_course

./: .gitignore  readme.md
robotics_base/: CMakeLists.txt  package.xml  readme.md
robotics_base/coppelia_scenes/: coppeliaMatlab_stewartPlatform.ttt  coppelia_panda_needle.ttt  coppelia_stewartPlatform.ttt  panda.ttt  panda_endoscope.ttt  panda_peg_and_ring.ttt  redsphere_stewartPlatform.ttt  ros_stewartPlatform.ttt  simple_ros_tutorial.ttt
robotics_base/include/robotics_base/: robotics_base.h
robotics_base/launch/: cpp_robotics_base.launch  python_robotics_base.launch
robotics_base/matlab_coppelia/: test_remote_api.m
robotics_base/rviz/: robotics_base.rviz
robotics_base/script/: StewartPlatform.py  StewartPlatformSim.py  feature_extraction.py  flip_image.py  person.py  remote_api.py  roboticsBase.py  simple_peg_ring.py
robotics_base/src/: robotics_base.cpp
